--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
         <meta charset= “UTF-8”>
         <meta name= “viewport” content=” width= device-width, initial-scale=1.0”>
         <title>Meraki Pateleria</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" herf="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
     </head>
-    <body> <link rel="stylesheet" href="style.css">
-        <div class="container">
-            <div class="Head"></div>
+    <body>
+       <div class="conteiner">
+        <div class="header">
             <h1>Meraki Pasteleria</h1>
-            <div class="menu"></div>
-            <h2>Subtitulo</h2>
-            <div class="botto"></div>
-            <p>datos</p>
-          </div>
-    </Head>
+       </div>
+       <div class="men">
+            <h2>cosas</h2>
+       </div>
+       <div clas="footer">
+        <p>algo</p>
+       </div>
+       <script rsc="//cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <body>
 
     
