--- a/index.html
+++ b/index.html
@@ -7,31 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <Header class="header">
-        <div class="menu container">
-            <a href="#" class="Logo">
-                <img src="" alt="logo">
-                <input type="checkbox" id="menu">
-                <label for="menu">
-                    <img srce="" class="menu-icono" alt="">
-                </label>
-                <h1>Meraki Pasteleria</h1>
-                <!-- agrego un navegador -->
-                <nav class="navbar">
-                    <ul> 
-                        <li><a herf="#">Nosotras</a></li>
-                        <li><a herf="#">Productos</a></li>
-                        <li><a herf="#">Iniciar sesión</a></li>
-                    </ul>
-                </nav>
-            </a>
-        </div class="header-content container">
-         <h1> Meraki Pasteleria </h1>
-         <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            Harum doloremque odio, fugit quos eaque obcaecati omnis, voluptatem sunt eveniet cupiditate sequi q
-            uo dolor distinctio delectus quod eius, temporibus rem vero?</p>
-            <a href="#" class="btn-1"> Nosotras y Nuestras politicas</a>
+    <Header>
+        <div class="Logo">
+            <img src="Logo.jpeg/WhatsApp Image 2024-04-06 at 17.41.17.jpeg" alt="logo">
+            <h2 class="Meraki Pateleria">Meraki Pasteleria</h2>
         </div>
+        <nav>
+            <a href="" class="nav-li">Inicio</a>
+            <a href="" class="nav-li">Productos</a>
+            <a href="" class="nav-li">Nosotros</a>
+            <a href="" class="nav-li">Iniciar sesion</a>
+        </nav>
+    </div>
+    
     </Header>
 
     <section class="Productos">
