--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <Header>
         <div class="Logo">
             <img src="Logo.jpeg/WhatsApp Image 2024-04-06 at 17.41.17.jpeg" alt="logo">
-            <h2 class="Meraki Pateleria">Meraki Pasteleria</h2>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#"><button>Inicio</button></a></li>
+                    <li><a href="#"><button>Productos</button></a></li>
+                    <li><a href="#"><button>Nosotros</button></a></li>
+                </ul>
+            </nav>
+            <a href="#" class="btn">Inicio de sesion<button></button></a>
         </div>
-        <nav>
-            <a href="" class="nav-li">Inicio</a>
-            <a href="" class="nav-li">Productos</a>
-            <a href="" class="nav-li">Nosotros</a>
-            <a href="" class="nav-li">Iniciar sesion</a>
-        </nav>
-    </div>
-    
+        
     </Header>
 
     <section class="Productos">
